[package]
name = "ratrac"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
symphonia = { version = "0.5", features = ["flac", "pcm", "wav", "mp3", "aac", "vorbis", "ogg"] }
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "codec"
harness = false
